infra: migrated to latest template.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,60 @@ jobs:
           node-version: 19.x
           always-auth: true
 
+      - name: Check commit message
+        id: commit
+        run: |
+         COMMIT_MSG=$(/usr/bin/git log --format=%B -n 1 HEAD)
+         STRING=$(echo $COMMIT_MSG | (grep -E "infra:|docs:|lint:|code-style:" || echo ''))
+
+         if [ -z "$STRING" ]; then
+          echo "IS_RELEASE_COMMIT=1" >> $GITHUB_OUTPUT
+          echo "IS_RELEASE_COMMIT=1" >> $GITHUB_ENV
+         else 
+          echo "This commit will NOT trigger a release."
+
+          echo "IS_RELEASE_COMMIT=0" >> $GITHUB_OUTPUT
+          echo "IS_RELEASE_COMMIT=0" >> $GITHUB_ENV
+         fi
+        
+
       - name: Install dependencies
         run: yarn
 
+      - name: Validate Markdown links
+        run: yarn check-links
+
+      - name: Validate package.json
+        run: yarn validate-package-json
+
+      - name: Run ESLint
+        if: env.IS_RELEASE_COMMIT == '1'
+        run: |
+         if [ "$IS_RELEASE_COMMIT" -eq "1" ]; then
+          yarn lint
+         else
+          exit 0
+         fi
+
       - name: Build source code
-        run: yarn build
+        if: env.IS_RELEASE_COMMIT == '1'
+        run: |
+         if [ "$IS_RELEASE_COMMIT" -eq "1" ]; then
+          yarn build
+         else
+          exit 0
+         fi
 
       - name: Run test suites
-        run: yarn test
+        if: env.IS_RELEASE_COMMIT == '1'
+        run: |
+         if [ "$IS_RELEASE_COMMIT" -eq "1" ]; then
+          yarn test
+         else
+          exit 0
+         fi
   release:
+    if: needs.test.outputs.IS_RELEASE_COMMIT == '1'
     permissions:
       contents: write
     needs: test
@@ -66,9 +111,9 @@ jobs:
         run: yarn
       - name: Build code
         run: yarn build
-      - name: Set access tokens
+      - name: Set authentication token
         run: |
-          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }} 
+          npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_AUTH_TOKEN }}
       - name: Publish to NPM
         run: yarn publish --access public
   publish-gpr:
@@ -88,9 +133,11 @@ jobs:
         run: yarn
       - name: Build code
         run: yarn build
-      - name: Set access tokens
+
+      - name: Set authentication token
         run: |
           npm set //npm.pkg.github.com/:_authToken ${{ secrets.GPR_AUTH_TOKEN }}
+
       - name: Get ready to publish to GPR
         run: |
           jq ".name = \"@$REPO\"" package.json > temp.json && mv temp.json package.json
