--- a/.github/workflows/pr-welcome.yml
+++ b/.github/workflows/pr-welcome.yml
@@ -6,9 +6,10 @@ on:
 
 jobs:
   say-hi:
-    runs-on: ubuntu-latest
+    continue-on-error: true
     permissions:
       pull-requests: write
+    runs-on: ubuntu-latest
     steps:
       - name: Say hi
         uses: jungwinter/comment@v1
@@ -17,7 +18,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue_number: ${{ github.event.pull_request.number }}
           body: |
-            Hi, ${{ github.event.pull_request.user.login }}! Welcome to ${{ github.repository }} issues! 
+            Hi, ${{ github.event.pull_request.user.login }}! Welcome to ${{ github.repository }} PRs! 
             Make sure to comply with the [Code of Conduct](
             https://github.com/${{ github.repository }}/blob/main/CODE_OF_CONDUCT.md), [security policy](
             https://github.com/${{ github.repository }}/blob/main/SECURITY.md) and [contribution guidelines
