--- a/package.json
+++ b/package.json
@@ -8,22 +8,36 @@
   ],
   "description": "Santi's Bisect Library: Binary search in a lightweight package.",
   "version": "0.0.5",
-  "main": "index.js",
+  "main": "cjs/index.js",
+  "typings": "cjs/index.d.ts",
+  "module": "index.mjs",
   "author": "santi100a <santyrojasprieto9@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "jest": "^29.5.0",
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.7",
+    "remark-cli": "^11.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-validate-links": "^12.1.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "test:coverage": "jest --coverage",
     "dev": "tsc -w",
-    "test:watch": "jest --watchAll --coverage"
+    "prettify": "prettier --write src/**/*.ts",
+    "lint": "eslint src/**/*.ts",
+    "esm-wrapper": "node scripts/esm-wrapper.js",
+    "validate-package-json": "node scripts/validate-package-json.js",
+    "lint-fix": "eslint --fix src/**/*.ts",
+    "test:watch": "jest --watchAll",
+    "check-links": "remark --frail ."
   },
-  "type": "module",
   "dependencies": {
     "@santi100/equal-lib": "^1.0.8"
   }
