--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
-    "exclude": ["node_modules"],
-    "include": ["src/*.ts"],
     "compilerOptions": {
         "strict": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "outDir": "cjs/",
         "declaration": true,
-        "outDir": "cjs/"
-    }
+        "target": "es3",
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"]
 }
